SONARIAC-1660 S6473: Exposing administration services is security-sensitive (#59)